--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/home.css"> 
     <title>About Page</title>
 </head>
 <body>
+    <%- include('partials/header') %>
     <h1>About Sern School</h1>
     <div class="about-one">
-        <%- include('partials/header') %>
         <div class="about-one-mid">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi ad sequi doloribus, ea hic at necessitatibus. Sapiente molestias deleniti debitis distinctio est quasi ipsam asperiores blanditiis enim, quae quod quibusdam corporis voluptates quam eveniet eaque nam pariatur! Distinctio ipsa itaque excepturi quia est repudiandae quo voluptates? Non, eligendi deserunt!</p>
         </div>
