--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Page</title>
-</head>
-<body>
-    <h2>This is where the teachers come to</h2>
-</body>
+  </head>
+  <body>
+      <%- include('partials/header') %>
+    <h2>Admin Page for Teachers</h2>
+
+    <table>
+      <tr>
+        <th>email</th>
+        <th>first_name</th>
+        <th>second_name</th>
+        
+      </tr>
+      <%students.forEach(stud=>{%>
+      <tr>
+        <td><%=stud.email%></td>
+        <td><%=stud.first_name%></td>
+        <td><%=stud.second_name%></td>
+        <td>
+          <form
+            action="/sign-up/:<%=stud.student_id%>"
+            style="display: block"
+            method="post"
+          >
+            <input type="submit" value="Delete" />
+          </form>
+        </td>
+      </tr>
+
+      <%})%>
+    </table>
+  </body>
 </html>
