--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <div class="top-nav">
-  <img src="" alt="" />
-  <div class="nav-section">
+  <img src="./images/school-logo.webp" alt="" />
+  
     <nav>
-      <a href="home">HOME</a>
+      <a href="/">HOME</a>
       <a href="about">ABOUT</a>
       <a href="sign-up">SIGN UP</a>
       <a href="sign-in">SIGN IN</a>
     </nav>
-  </div>
+  
 </div>
