--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Home Page</title>
 </head>
 <body>
-    <h1>Sern School</h1>
     <div class="page-one">
-       <%- include('partials/header') %>
+        <%- include('partials/header') %>
+        <h1>Sern School</h1>
         <div class="mid-section">
             <h1>Welcome to Sern School</h1>
             <h4>Cool catch phrase</h4>
-            <button>Start Learning</button>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolor praesentium laudantium debitis ea veniam, nesciunt doloremque nostrum quae qui soluta, magni facere itaque, officiis consectetur. Nulla assumenda voluptatem omnis voluptates enim, quae, alias commodi soluta beatae provident cumque error doloribus voluptate. Nobis sint vel amet ad vitae dolorum suscipit.</p>
+            <button class="button">Start Learning</button>
         </div>
         <div class="bottom-section">
             <a href="https://www.facebook.com">Facebook</a>
@@ -27,15 +28,15 @@
             <div class="each-card">
                 <h3></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button>MORE</button>
+                <button class="button">MORE</button>
             <div class="each-card">
                 <h3></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button>MORE</button>
+                <button class="button">MORE</button>
             <div class="each-card">
                 <h3></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button>MORE</button>
+                <button class="button">MORE</button>
             </div>
         </div>
     </div>
