--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -22,6 +22,8 @@
     <h2>Registration Form</h2>
     <div class="signings">
       <form action="/sign-up" method="POST">
+        <label for="user_id">User ID</label>
+        <input type="number" name="user_id" id="user_id"><br><br>
         <label for="first_name">FIRST NAME</label>
         <input
           type="text"
@@ -68,11 +70,13 @@
         <label for="teacher">Teacher</label>
         <input type="radio" name="student" id="student" />
         <label for="student">Student</label> -->
-        <label for="role">Role</label>
-        <select name="role" id="role">
+        <label for="role">Select Role:</label>
+        <input type="text" name="role" id="role"><br><br>
+        <!-- <input type="text" name="role" id="role"><br><br> -->
+        <!-- <select name="role" id="role">
           <option value="teacher" id="teacher">Teacher</option>
           <option value="student" id="student">Student</option>
-        </select><br><br>
+        </select><br><br> -->
         <input class="button" type="submit" value="REGISTER" /><br><br>
         <p>Already have an account? <a href="sign-in">Sign In</a></p>
       </form>
