--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
             <h1>Welcome to Sern School</h1>
             <h4>Cool catch phrase</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolor praesentium laudantium debitis ea veniam, nesciunt doloremque nostrum quae qui soluta, magni facere itaque, officiis consectetur. Nulla assumenda voluptatem omnis voluptates enim, quae, alias commodi soluta beatae provident cumque error doloribus voluptate. Nobis sint vel amet ad vitae dolorum suscipit.</p>
-            <button class="button">Start Learning</button>
+            <button class="button start">Start Learning</button>
         </div>
         <div class="bottom-section">
             <a href="https://www.facebook.com">Facebook</a>
@@ -23,18 +23,21 @@
             <a href="https://www.linkedin.com">Linked in</a>
         </div>
     </div>
+    <hr>
     <div class="page-two">
         <div class="cards">
             <div class="each-card">
-                <h3></h3>
+                <h3>card</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
                 <button class="button">MORE</button>
+            </div>
             <div class="each-card">
-                <h3></h3>
+                <h3>card</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
                 <button class="button">MORE</button>
+            </div>
             <div class="each-card">
-                <h3></h3>
+                <h3>card</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
                 <button class="button">MORE</button>
             </div>
