sign-in and sign-up

--- a/puclic/CSS/home.css
+++ b/puclic/CSS/home.css
@@ -112,3 +112,9 @@ body{
 #different-form{
     border: none;
 }
+/*other parts*/
+.header-error{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
