--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -16,15 +16,17 @@
         <a href="/sign-in">SIGN IN</a>
       </nav>
     </div>
-    <%if(locals.error){%>
-    <p style="color: red"><%=error%></p>
-    <%}%>
-    <h2>Registration Form</h2>
+    <div class="header-error">
+      <h2>Registration Form</h2>
+      <%if(locals.error){%>
+      <p style="color: red"><%=error%></p>
+      <%}%>
+    </div>
     <div class="signings">
       <form action="/sign-up" method="POST">
-        <label for="user_id">User ID</label>
-        <input type="number" name="user_id" id="user_id"><br><br>
-        <label for="first_name">FIRST NAME</label>
+        <!-- <label for="user_id">USER ID:</label>
+        <input type="number" name="user_id" id="user_id" placeholder="User ID" required><br><br> -->
+        <label for="first_name">FIRST NAME:</label>
         <input
           type="text"
           name="first_name"
@@ -32,7 +34,7 @@
           placeholder="First Name"
           required
         /><br />
-        <label for="second_name">SECOND NAME</label>
+        <label for="second_name">SECOND NAME:</label>
         <input
           type="text"
           name="second_name"
@@ -40,15 +42,15 @@
           placeholder="Second Name"
           required
         /><br />
-        <label for="email">EMAIL</label>
+        <label for="email">EMAIL:</label>
         <input
           type="email"
           name="email"
           id="email"
-          placeholder="email"
+          placeholder="Email"
           required
         /><br />
-        <label for="password">PASSWORD</label>
+        <label for="password">PASSWORD:</label>
         <input
           type="password"
           name="password"
@@ -56,7 +58,7 @@
           placeholder="Password"
           required
         /><br />
-        <label for="confirm_password">CONFIRM PASSWORD</label>
+        <label for="confirm_password">CONFIRM PASSWORD:</label>
         <input
           type="password"
           name="confirm_password"
@@ -70,8 +72,8 @@
         <label for="teacher">Teacher</label>
         <input type="radio" name="student" id="student" />
         <label for="student">Student</label> -->
-        <label for="role">Select Role:</label>
-        <input type="text" name="role" id="role"><br><br>
+        <label for="role">SELECT ROLE:</label>
+        <input type="text" name="role" id="role" placeholder="Role" required><br><br>
         <!-- <input type="text" name="role" id="role"><br><br> -->
         <!-- <select name="role" id="role">
           <option value="teacher" id="teacher">Teacher</option>
