--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,51 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css"> 
+    <link rel="stylesheet" href="./css/about.css">
     <title>About Page</title>
 </head>
 <body>
-    <%- include('partials/header') %>
-    <h1>About Sern School</h1>
     <div class="about-one">
+        <%- include('partials/header') %>
+        <h1>About Sern School</h1>
         <div class="about-one-mid">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi ad sequi doloribus, ea hic at necessitatibus. Sapiente molestias deleniti debitis distinctio est quasi ipsam asperiores blanditiis enim, quae quod quibusdam corporis voluptates quam eveniet eaque nam pariatur! Distinctio ipsa itaque excepturi quia est repudiandae quo voluptates? Non, eligendi deserunt!</p>
         </div>
+        <div class="about-one-mid">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi ad sequi doloribus, ea hic at necessitatibus. Sapiente molestias deleniti debitis distinctio est quasi ipsam asperiores blanditiis enim, quae quod quibusdam corporis voluptates quam eveniet eaque nam pariatur! Distinctio ipsa itaque excepturi quia est repudiandae quo voluptates? Non, eligendi deserunt!</p>
         </div>
+
+        <div class="about-one-mid">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi ad sequi doloribus, ea hic at necessitatibus. Sapiente molestias deleniti debitis distinctio est quasi ipsam asperiores blanditiis enim, quae quod quibusdam corporis voluptates quam eveniet eaque nam pariatur! Distinctio ipsa itaque excepturi quia est repudiandae quo voluptates? Non, eligendi deserunt!</p>
+        </div>
+        <div class="about-one-mid learn">
+            <button class="start">Learn More</button>
         </div>
     </div>
+    <hr>
     <div class="about-two">
+        <h1>What we offer</h1>
         <div class="about-cards">
             <div class="each-about-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
-                <button>APPLY</button>
+                <button class="btns">APPLY</button>
             </div>
             <div class="each-about-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
-                <button>APPLY</button>
+                <button class="btns">APPLY</button>
             </div>
             <div class="each-about-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
-                <button>APPLY</button>
+                <button class="btns">APPLY</button>
             </div>
             <div class="each-about-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
-                <button>APPLY</button>
+                <button class="btns">APPLY</button>
             </div>
             <div class="each-about-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
-                <button>APPLY</button>
+                <button class="btns">APPLY</button>
             </div>
             <div class="each-about-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
-                <button>APPLY</button>
+                <button class="btns">APPLY</button>
             </div>
         </div>
     </div>
