--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/about.css">
     <title>Home Page</title>
 </head>
 <body>
     <div class="page-one">
         <%- include('partials/header') %>
-        <h1>Sern School</h1>
+        <h1>SERN SCHOOL</h1>
         <div class="mid-section">
-            <h1>Welcome to Sern School</h1>
-            <h4>Cool catch phrase</h4>
+            <h1>WELCOME TO SERN SCHOOL</h1>
+            <h4>LEADING THE LEADERS</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolor praesentium laudantium debitis ea veniam, nesciunt doloremque nostrum quae qui soluta, magni facere itaque, officiis consectetur. Nulla assumenda voluptatem omnis voluptates enim, quae, alias commodi soluta beatae provident cumque error doloribus voluptate. Nobis sint vel amet ad vitae dolorum suscipit.</p>
             <button class="button start">Start Learning</button>
         </div>
@@ -25,21 +26,28 @@
     </div>
     <hr>
     <div class="page-two">
+        <div class="page-two-top">
+            <h1>Co-curricular Activities</h1>
+            
+        </div>
         <div class="cards">
             <div class="each-card">
-                <h3>card</h3>
+                <h3>Sports</h3>
+                <img src="./images/black-green.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button class="button">MORE</button>
+                <button class="button btns">MORE</button>
             </div>
             <div class="each-card">
-                <h3>card</h3>
+                <h3>Child support</h3>
+                <img src="./images/new.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button class="button">MORE</button>
+                <button class="button btns">MORE</button>
             </div>
             <div class="each-card">
-                <h3>card</h3>
+                <h3>Development</h3>
+                <img src="./images/glass-read.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button class="button">MORE</button>
+                <button class="button btns">MORE</button>
             </div>
         </div>
     </div>
