--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -36,5 +36,6 @@
         <p>Don't have an account? <a href="sign-up">Sign Up</a></p>
       </form>
     </div>
+    <%- include('partials/footer') %>
   </body>
 </html>
