--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -83,5 +83,6 @@
         <p>Already have an account? <a href="sign-in">Sign In</a></p>
       </form>
     </div>
+    <%- include('partials/footer') %>
   </body>
 </html>
