--- a/puclic/CSS/home.css
+++ b/puclic/CSS/home.css
@@ -2,7 +2,26 @@
     margin:0px;
     padding: 0px;
     font-family: sans-serif;
+    
 }
+body{
+    background-color: #ebebf0;
+}
+h1{
+    padding: 0px 0px 0px 20px;
+    color:  rgb(69,121,152);
+}
+/*page one*/
+.page-one{
+    background-image: url("../images/books-5937716__340.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* filter: blur(2px); */
+    /* background-blend-mode: darken; */
+    
+    
+}
+
 /*buttons*/
 .button{
     width: max-content;
@@ -38,8 +57,10 @@
     gap: 60px;
 }
 .start{
-    width: 40;
-    height: 30px;
+    width: 170px;
+    height: 40px;
+    border: none;
+    background-color: rgb(69,121,152);
 }
 .bottom-section{
     display: flex;
@@ -50,35 +71,46 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 60px;
+    padding: 10px 0px 10px 30px;
     gap: 60px;
 }
 hr{
-    width: 95%;
+    width: 100%;
     margin: 20px;
     border: 1px solid black;
+    padding: 0px;
 }
 /*page two styles*/
-/* .page-two{
+.page-two-top{
     display: flex;
-    flex-direction: column;
-} */
+    justify-content: space-between;
+}
+
 .cards{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 40px 30px;
+    padding: 30px 0px 0px 10px;
     height: 100vh;
 }
 .each-card{
+
     width: 400px;
     height: 70%;
-    background-color: brown;
+}
+.each-card, .each-about-card{
+    background-color:#b4b4bc;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 20px;
+    padding: 10px;
+}
+.each-card img{
+    width: 330px;
+    height: 240px;
+    border-radius: 10px;
 }
 /*form styling*/
 .signings{
@@ -117,4 +149,27 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+/*footer*/
+.footer{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    padding: 40px 0px 10px 10px;
+    background-color: #b4b4bc;
+    margin: 0px;
+    justify-content: center;
+    
+}
+.footer nav{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.last-part{
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    background-color: #b4b4bc;
+    /* width: max-content; */
 }
