--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <div class="top-nav">
-  <img src="./images/school-logo.webp" alt="" />
+  <img src="./images/logo.png" alt="" />
   
     <nav>
       <a href="/">HOME</a>
