UX part one done

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -10,7 +10,7 @@
   <body>
     <!-- add headers here  -->
      <div class="top-nav">
-      <img src="./images/school-logo.webp" alt="" />
+      <img src="./images/logo.png" alt="" />
       <nav>
         <a href="/">HOME</a>
         <a href="/sign-in">SIGN IN</a>
