--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,10 +15,10 @@
     </nav>
     <nav class="links">
         <h4>Links</h4>
-        <a href="">Sign Up</a>
-        <a href="">Sign In</a>
-        <a href="">Home</a>
-        <a href="">About</a>
+        <a href="/sign-up">Sign Up</a>
+        <a href="/sign-in">Sign In</a>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
     </nav>
 </div>
 <div class="last-part">
