--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top-nav">
-      <img src="./images/school-logo.webp" alt="" />
+      <img src="./images/logo.png" alt="logo" />
       <nav>
         <a href="/">HOME</a>
         <a href="/sign-up">SIGN UP</a>
