--- a/puclic/CSS/home.css
+++ b/puclic/CSS/home.css
@@ -1,175 +1,11 @@
-*{
-    margin:0px;
-    padding: 0px;
-    font-family: sans-serif;
-    
-}
-body{
-    background-color: #ebebf0;
-}
-h1{
-    padding: 0px 0px 0px 20px;
-    color:  rgb(69,121,152);
-}
-/*page one*/
-.page-one{
-    background-image: url("../images/books-5937716__340.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* filter: blur(2px); */
-    /* background-blend-mode: darken; */
-    
-    
-}
-
-/*buttons*/
-.button{
-    width: max-content;
-    justify-content: center;
-    background-color: rgb(199, 194, 194);
-    border: 1px solid black;
-}
-/*header styling*/
-.top-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-}
-.top-nav img{
-    width: 90px;
-    
-}
-.top-nav nav {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    
-}
-.top-nav nav a, .bottom-section a{
-   text-decoration: none;
-   color: grey;
-   font-weight: 400;
-}
-.page-one{
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    gap: 60px;
-}
-.start{
-    width: 170px;
-    height: 40px;
-    border: none;
-    background-color: rgb(69,121,152);
-}
-.bottom-section{
-    display: flex;
-    justify-content: space-around;
-}
-
 .mid-section{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 10px 0px 10px 30px;
-    gap: 60px;
-}
-hr{
-    width: 100%;
-    margin: 20px;
-    border: 1px solid black;
-    padding: 0px;
-}
-/*page two styles*/
-.page-two-top{
-    display: flex;
-    justify-content: space-between;
-}
 
+}
+/*cards styling*/
 .cards{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 30px 0px 0px 10px;
-    height: 100vh;
-}
-.each-card{
-
-    width: 400px;
-    height: 70%;
-}
-.each-card, .each-about-card{
-    background-color:#b4b4bc;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    padding: 10px;
-}
-.each-card img{
-    width: 330px;
-    height: 240px;
-    border-radius: 10px;
-}
-/*form styling*/
-.signings{
-    display: flex;
-    justify-content: center;
-    min-height: 100vh;
-}
-form{
-    border: 1px solid black;
-    padding: 20px;
-    border-radius: 10px;
-    width: 50%;
-    height: max-content;
-}
-input{
-    display: block;
-    width: 80%;
-    padding: 10px;
-}
-/*admin view*/
-body{
-    display: flex;
-    flex-direction: column;
     
-}
-.different-form-input{
-    border: none;
-    border-radius: 10px;
-    background-color: rgb(245, 47, 47);
-}
-#different-form{
-    border: none;
-}
-/*other parts*/
-.header-error{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-/*footer*/
-.footer{
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    padding: 40px 0px 10px 10px;
-    background-color: #b4b4bc;
-    margin: 0px;
-    justify-content: center;
-    
-}
-.footer nav{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
-.last-part{
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    background-color: #b4b4bc;
-    /* width: max-content; */
 }
