--- a/views/about.ejs
+++ b/views/about.ejs
@@ -29,33 +29,33 @@
     <hr>
     <div class="about-two">
         <h1>What we offer</h1>
-        <div class="about-cards">
-            <div class="each-about-card">
+        <div class="cards">
+            <div class="each-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
                 <button class="btns">APPLY</button>
             </div>
-            <div class="each-about-card">
+            <div class="each-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
                 <button class="btns">APPLY</button>
             </div>
-            <div class="each-about-card">
+            <div class="each-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
                 <button class="btns">APPLY</button>
             </div>
-            <div class="each-about-card">
+            <div class="each-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
                 <button class="btns">APPLY</button>
             </div>
-            <div class="each-about-card">
+            <div class="each-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
                 <button class="btns">APPLY</button>
             </div>
-            <div class="each-about-card">
+            <div class="each-card">
                 <h5>logo</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias consequatur sapiente quisquam natus voluptas suscipit molestiae earum. Itaque, quod omnis.</p>
                 <button class="btns">APPLY</button>
