--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
             <h1>WELCOME TO SERN SCHOOL</h1>
             <h4>LEADING THE LEADERS</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolor praesentium laudantium debitis ea veniam, nesciunt doloremque nostrum quae qui soluta, magni facere itaque, officiis consectetur. Nulla assumenda voluptatem omnis voluptates enim, quae, alias commodi soluta beatae provident cumque error doloribus voluptate. Nobis sint vel amet ad vitae dolorum suscipit.</p>
-            <button class="button start">Start Learning</button>
+            <button class="start-btn">Start Learning</button>
         </div>
         <div class="bottom-section">
             <a href="https://www.facebook.com">Facebook</a>
@@ -35,19 +35,19 @@
                 <h3>Sports</h3>
                 <img src="./images/black-green.jpg" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button class="button btns">MORE</button>
+                <button class="btns">MORE</button>
             </div>
             <div class="each-card">
                 <h3>Child support</h3>
                 <img src="./images/new.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button class="button btns">MORE</button>
+                <button class="btns">MORE</button>
             </div>
             <div class="each-card">
                 <h3>Development</h3>
                 <img src="./images/glass-read.jpg" alt="image">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi voluptatibus iure nostrum distinctio beatae fugit ut architecto? Itaque, repellendus.</p>
-                <button class="button btns">MORE</button>
+                <button class="btns">MORE</button>
             </div>
         </div>
     </div>
