--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -32,7 +32,7 @@
           id="password"
           required
         /><br /><br />
-        <input class="button" type="submit" value="LOG IN" /><br><br>
+        <input class="btns" type="submit" value="LOG IN" /><br><br>
         <p>Don't have an account? <a href="sign-up">Sign Up</a></p>
       </form>
     </div>
