--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -66,20 +66,11 @@
           placeholder="Confirm Password"
           required
         /><br />
-        <!-- <label for="role">Select Role</label><br />
-
-        <input type="radio" name="teacher" id="teacher" />
-        <label for="teacher">Teacher</label>
-        <input type="radio" name="student" id="student" />
-        <label for="student">Student</label> -->
+        
         <label for="role">SELECT ROLE:</label>
         <input type="text" name="role" id="role" placeholder="Role" required><br><br>
-        <!-- <input type="text" name="role" id="role"><br><br> -->
-        <!-- <select name="role" id="role">
-          <option value="teacher" id="teacher">Teacher</option>
-          <option value="student" id="student">Student</option>
-        </select><br><br> -->
-        <input class="button" type="submit" value="REGISTER" /><br><br>
+        
+        <input class="btns" type="submit" value="REGISTER" /><br><br>
         <p>Already have an account? <a href="sign-in">Sign In</a></p>
       </form>
     </div>
