--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -23,9 +23,8 @@
       <%}%>
     </div>
     <div class="signings">
-      <form action="/sign-up" method="POST">
-        <!-- <label for="user_id">USER ID:</label>
-        <input type="number" name="user_id" id="user_id" placeholder="User ID" required><br><br> -->
+      <form action="/sign-up" method="POST" enctype="multipart/form-data">
+        
         <label for="first_name">FIRST NAME:</label>
         <input
           type="text"
@@ -69,8 +68,13 @@
         
         <label for="role">SELECT ROLE:</label>
         <input type="text" name="role" id="role" placeholder="Role" required><br><br>
-        
+      
+        <label for="image">Profile Image</label>
+        <input type="file" name="image" id="image" required>
+
         <input class="btns" type="submit" value="REGISTER" /><br><br>
+
+        
         <p>Already have an account? <a href="sign-in">Sign In</a></p>
       </form>
     </div>
