--- a/views/users.ejs
+++ b/views/users.ejs
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Users Page | Students</title>
 </head>
 <body>
      <header>
-       
-        
+        <div>
+            <img src="./images/logo.png" alt="logo">
+        </div>
+        <div>
+          <a href="/home">HOME</a>  
+          <a href="/about">ABOUT</a>
+          <a href="/sign-out">SIGN OUT</a>
+          <button class="user-icon">
+              <img src="./images/profiles/<%=stud.image%>" alt="user icon" id="this-one">
+            </button>
+        </div>
             
     </header>
+    <main>
+        <h1>Welcome, <%=stud.first_name%></h1>
+    </main>
 </body>
 </html>
