UX for users and DB configuration

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,8 @@
             <h1>WELCOME TO SERN SCHOOL</h1>
             <h4>LEADING THE LEADERS</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolor praesentium laudantium debitis ea veniam, nesciunt doloremque nostrum quae qui soluta, magni facere itaque, officiis consectetur. Nulla assumenda voluptatem omnis voluptates enim, quae, alias commodi soluta beatae provident cumque error doloribus voluptate. Nobis sint vel amet ad vitae dolorum suscipit.</p>
-            <button class="start-btn">Start Learning</button>
+            <!-- <button class="start-btn">Start Learning</button> -->
+            <span class="start-btn"><a href="/register">START LEARNING</a></span>
         </div>
         <div class="bottom-section">
             <a href="https://www.facebook.com">Facebook</a>
