--- a/puclic/CSS/home.css
+++ b/puclic/CSS/home.css
@@ -4,15 +4,16 @@
     justify-content: space-between;
     padding: 10px;
 }
-.top-nav nav{
+.top-nav nav, .for-top-nav{
     display: flex;
     justify-content: space-between;
     gap: 16px;
     padding: 14px;
 }
-.top-nav nav a{
+.top-nav nav a, .for-top-nav a{
     text-decoration: none;
     color: aquamarine;
+    padding-top: 12px;
 }
 .top-nav img{
     width: 90px;
@@ -87,11 +88,46 @@ table, th, td{
 }
 /*users page for students*/
 #this-one{
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
-    border: none;
+    border: 2px solid black;
     margin: 0;
+    
+}
+.for-top-nav{
+   
+}
+.user-icon{
+    
+}
+/*footer styles*/
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.footer{
+    display: flex;
+    padding: 20px;
+    justify-content: space-between;
+    background-color: #8cbca4;
+
+}
+.links{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    
+}
+.links a{
+    text-decoration: none;
+    color: black;
+}
+.last-part{
+    display: flex;
+    justify-content: center;
+    background-color: #8cbca4;
 }
 
 @media screen and (max-width: 600px){
