--- a/views/users.ejs
+++ b/views/users.ejs
@@ -8,25 +8,31 @@
     <title>Users Page | Students</title>
   </head>
   <body>
-    <header>
+    <header class="top-nav">
       <div>
         <img src="./images/logo.png" alt="logo" />
       </div>
-      <div>
+      <div class="for-top-nav">
         <a href="/">HOME</a>
         <a href="/about">ABOUT</a>
         <a href="/sign-out">SIGN OUT</a>
-        <button class="user-icon">
+        <span class="user-icon">
           <img
             src="./images/profiles/<%=stud.image%>"
             alt="user icon"
             id="this-one"
           />
-        </button>
+        </span>
       </div>
     </header>
     <main>
       <h1>Welcome, <%=stud.first_name%></h1>
+      <div class="courses">
+        <h2>Registered course : <span> </span></h2>
+      </div>
     </main>
+    <footer>
+      <%- include('partials/footer') %>
+    </footer>
   </body>
 </html>
